--- a/7/9.ipynb
+++ b/7/9.ipynb
@@ -31,7 +31,7 @@
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "2021-11-15T18:34:40.52\n",
+            "2021-11-30T18:45:37.528\n",
             "Julia Version 1.5.4\n",
             "Commit 69fcb5745b (2021-03-11 19:13 UTC)\n",
             "Platform Info:\n",
@@ -47,7 +47,7 @@
           ]
         }
       ],
-      "execution_count": 37,
+      "execution_count": 1,
       "metadata": {
         "collapsed": true,
         "jupyter": {
@@ -60,24 +60,82 @@
           }
         },
         "execution": {
-          "iopub.status.busy": "2021-11-15T16:34:40.541Z",
-          "iopub.execute_input": "2021-11-15T16:34:40.551Z",
-          "iopub.status.idle": "2021-11-15T16:34:40.573Z"
+          "iopub.status.busy": "2021-11-30T16:45:36.474Z",
+          "iopub.execute_input": "2021-11-30T16:45:37.423Z",
+          "iopub.status.idle": "2021-11-30T16:45:39.795Z"
         }
       }
     },
     {
       "cell_type": "markdown",
       "source": [
-        "2-5 \n",
+        "9-11\n",
         "\n",
-        "Kirjan vastaus: 5-09 eV, Nikkeli"
+        "Kirjan vastaus: d kyllä, muut ei\n",
+        "\n",
+        "$\\beta^-$ hajoaminen <br>\n",
+        "neutroni muuttuu protoniksi ja samalla emittoituu elektroni ja antineutriino <br>\n",
+        "$ _0^1n \\rightarrow _1^1p + _{-1}^{0}e + \\overline{v}$\n",
+        "\n",
+        "$\\beta^+$ hajoaminen <br>\n",
+        "protoni muuttuu neutroniksi ja samalla emittoituu positroni ja neutriino <br>\n",
+        "$ _1^1p \\rightarrow _0^1n + _{+1}^{0}e + v$\n"
       ],
       "metadata": {
         "nteract": {
           "transient": {
             "deleting": false
           }
+        }
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "9-15\n",
+        "\n",
+        "Kirjan vastaus: 12 MeV (Z=82)"
+      ],
+      "metadata": {
+        "nteract": {
+          "transient": {
+            "deleting": false
+          }
+        }
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "lambda=0.1e-12\n",
+        "dE=h*c/lambda\n",
+        "@printf(\"0.1 pm aallonpituudella energia on %.0f MeV.\\n\",dE/1e6/eV)"
+      ],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "0.1 pm aallonpituudella energia on 12 MeV.\n"
+          ]
+        }
+      ],
+      "execution_count": 3,
+      "metadata": {
+        "collapsed": true,
+        "jupyter": {
+          "source_hidden": false,
+          "outputs_hidden": false
+        },
+        "nteract": {
+          "transient": {
+            "deleting": false
+          }
+        },
+        "execution": {
+          "iopub.status.busy": "2021-11-30T17:37:14.318Z",
+          "iopub.execute_input": "2021-11-30T17:37:14.328Z",
+          "iopub.status.idle": "2021-11-30T17:37:14.358Z"
         }
       }
     }
